@@ -30,7 +30,8 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import sun.misc.BASE64Encoder;
+//import sun.misc.BASE64Encoder;
+import java.util.Base64;
 import common.dao.CommonDao;
 import common.dao.DevDao;
 import common.dao.OperDao;
@@ -86,8 +87,9 @@ public class BatchFwqService {
 	public List<?> getConfluenceAttachMent(@SuppressWarnings("rawtypes") List list,JSONObject space) throws Exception {
 		
 		String strUser="conf.dashboard:conf.dashboard";
-		BASE64Encoder base64Encoder = new BASE64Encoder();
-		String base64User = base64Encoder.encode(strUser.getBytes());
+		//BASE64Encoder base64Encoder = new BASE64Encoder();
+		//String base64User = base64Encoder.encode(strUser.getBytes());
+		String base64User = Base64.getEncoder().encodeToString(strUser.getBytes());
 		
 		JSONArray pageResults = space.getJSONArray("results");
 		for(Object page :pageResults){
@@ -135,8 +137,9 @@ public class BatchFwqService {
 		
 //		String strUser="chanjoo2.lee:chanjoo2.lee";
 		String strUser="conf.dashboard:conf.dashboard";
-		BASE64Encoder base64Encoder = new BASE64Encoder();
-		String base64User = base64Encoder.encode(strUser.getBytes());
+		// BASE64Encoder base64Encoder = new BASE64Encoder();
+		// String base64User = base64Encoder.encode(strUser.getBytes());
+		String base64User = Base64.getEncoder().encodeToString(strUser.getBytes());
 		
 		String spaceKey =parameter.get("spaceKey").toString();
 		String title = parameter.get("title").toString().replace(" ", "+");
@@ -223,8 +226,9 @@ public class BatchFwqService {
             
             java.net.HttpURLConnection con = (HttpURLConnection) myurl.openConnection();
             String strUser="conf.dashboard:conf.dashboard";
-    		BASE64Encoder base64Encoder = new BASE64Encoder();
-    		String base64User = base64Encoder.encode(strUser.getBytes());
+    		//BASE64Encoder base64Encoder = new BASE64Encoder();
+    		//String base64User = base64Encoder.encode(strUser.getBytes());
+            String base64User = Base64.getEncoder().encodeToString(strUser.getBytes());
             con.setRequestProperty("Authorization", "Basic "+base64User); 
 		    con.setRequestProperty("Accept", "text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8");
             InputStream ins = con.getInputStream();
